--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             il quale diventerai mia moglie, se lo vorrai. Questo &egrave; solo una promessa anticipata.</span></p>
     <p class="c2"><span class="c1">Ti amo pi&ugrave; di ogni altra cosa.</span></p>
     <p class="c2"><span class="c1">Sasha</span></p>
-    <embed src="allOfMe.mp3" loop="true" autostart="true" width="2" height="0">
+    <embed src="music.mp3" loop="true" autostart="true" width="2" height="0">
 
 </body>
 
